style: Simplify JVM opts and remove debug logging